--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.14.0",
+    "dotenv": "^2.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "twit": "^2.2.5"
