--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twitter-client-sample",
+  "name": "MyTwitterClient",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
